--- a/backend/app/render.yaml
+++ b/backend/app/render.yaml
@@ -7,7 +7,7 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 8000
     autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
