--- a/backend/app/render.yaml
+++ b/backend/app/render.yaml
@@ -3,15 +3,17 @@ services:
     name: umde-backend
     env: python
     branch: main
-    region: oregon  # or any Render-supported region
+    region: oregon
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 8000
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 8000
     autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
         value: 3.10
       - key: ENV
         value: production
-      # Add more environment variables as needed
+      - key: PYTHONPATH
+        value: backend
+    workDir: backend
