--- a/render.yaml
+++ b/render.yaml
@@ -7,13 +7,13 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    startCommand: uvicorn app.main:app --host=0.0.0.0 --port=8000
     autoDeploy: true
+    workDir: backend
     envVars:
       - key: PYTHON_VERSION
         value: 3.10
       - key: ENV
         value: production
       - key: PYTHONPATH
-        value: backend
-    workDir: backend
+        value: .
