--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,8 @@
 services:
   - type: web
     name: umde-backend
-    env: python
-    branch: main
+    env: docker
     region: oregon
-    buildCommand: |
-      pip install --upgrade pip
-      pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host=0.0.0.0 --port=8000
+    dockerfilePath: ./Dockerfile
+    branch: main
     autoDeploy: true
-    workDir: backend
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.10
-      - key: ENV
-        value: production
-      - key: PYTHONPATH
-        value: .
